# FFmpegStudyDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/ffmpegstudydemo/: AutoFitTextureView.java  Camera2BasicFragment.java  FFmpegHandler.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml  fragment_camera2_basic.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
